--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-click==6.7
-coverage==4.5.1
-coveralls==1.3.0
-decorator==4.0.6
+aniso8601==3.0.2
+Click==7.0
 Flask==1.0.2
-Flask-MySQLdb==0.2.0
 Flask-RESTful==0.3.6
-Flask-WTF==0.14.2
-guacamole==0.9.2
-gunicorn==19.9.0
-Jinja2==2.10
-unittest2==1.1.0
-Werkzeug==0.14.1
 itsdangerous==0.24
+Jinja2==2.10
 MarkupSafe==1.0
+psycopg2==2.7.5
+pytz==2018.5
+six==1.11.0
+Werkzeug==0.14.1
