--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ python:
     - "3.6"
 
 # install dependency
+services:
+  - postgresql
+
+before_script:
+- psql -c 'create database food_db;' -U postgres
+- psql -c 'create database test_db;' -U postgres
+
 install: 
   - pip install -r requirements.txt
   - pip install pytest
@@ -13,7 +20,6 @@ install:
 script:
   - coverage run --source=. -m unittest discover
   - coverage report
-
 
 after_success: 
 - coveralls
