--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ Click==7.0
 Flask==1.0.2
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.6
+gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pep8==1.7.1
 psycopg2==2.7.5
 PyJWT==1.4.2
 pytz==2018.5
 six==1.11.0
 Werkzeug==0.14.1
-
-
