--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pep8==1.7.1
+pkg-resources==0.0.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 PyJWT==1.4.2
 python-dotenv==0.9.1
 pytz==2018.5
