--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 
 python:
     - "3.6"
+env:
+   - export APP_SETTINGS=testings
 
 # install dependency
 services:
@@ -9,7 +11,6 @@ services:
 
 before_script:
 - psql -c 'create database food_db;' -U postgres
-- psql -c 'create database test_db;' -U postgres
 
 install: 
   - pip install -r requirements.txt
