--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: python
 python:
     - "3.6"
 env:
-   - export APP_SETTINGS=testings
-   - export DATABASE_URL2=postgresql://postgres:password@localhost/test_db
+   - APP_SETTINGS=testings
+   - DATABASE_URL=postgresql:postgres
 
 # install dependency
 services:
