--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 
 install: 
   - pip install -r requirements.txt
+  - python install pytest-cov
 
 script:
   - coverage run --source=. -m unittest discover
