--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 
 before_script:
 - psql -c 'create database food_db;' -U postgres
+- psql -c 'create database test_db;' -U postgres
 
 install: 
   - pip install -r requirements.txt
