--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
 aniso8601==3.0.2
+certifi==2018.8.24
+chardet==3.0.4
 Click==7.0
+coverage==4.5.1
+coveralls==1.5.1
+docopt==0.6.2
+flasgger==0.9.1
 Flask==1.0.2
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.6
 gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
 MarkupSafe==1.0
+mistune==0.8.3
+nose==1.3.7
 pep8==1.7.1
 psycopg2==2.7.5
 PyJWT==1.4.2
 python-dotenv==0.9.1
 pytz==2018.5
+PyYAML==3.13
+requests==2.19.1
 six==1.11.0
+urllib3==1.23
 Werkzeug==0.14.1
-psycopg2-binary
-
