--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ MarkupSafe==1.0
 mistune==0.8.3
 nose==1.3.7
 pep8==1.7.1
-psycopg2==2.7.5
+psycopg2-binary==2.7.5
 PyJWT==1.4.2
 python-dotenv==0.9.1
 pytz==2018.5
